[package]
name = "json-log-viewer"
version = "0.1.0"
authors = ["TatriX <tatrics@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.94", features = ["derive"]}
serde_json = "1.0.40"
colored = "1.8.0"
chrono = { version = "0.4", features = ["serde"] }
unescape = "0.1.0"
